[package]
name = "mio-tests"
version = "0.1.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6"
pin-project-lite = "0.1"
rsc2_pb = {path = "../rsc2/rsc2-pb", features=["codec"]}
tokio-util = {version = "0.2", features=["codec"]}
futures = "0.3"
bytes = "0.5"
websocket-lite = "0.3"
tokio = {version ="0.2", features=["io-util"]}
slab = "0.4.2"
